force-app/main/default/objects/BlockedCountries__c/BlockedCountries__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>List of Blocked countries while creating/qualifying a Lead</description>
    <label>Blocked Countries</label>
</CustomObject>