force-app/main/default/objects/BlockedCountries__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Date till which this country would be considered block. If this is empty, the block would happen indefinitely</description>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>