force-app/main/default/objects/BlockedCountries__c/fields/Mandant__c.field-meta.xml
<CustomField>
    <fullName>Mandant__c</fullName>
    <label>Mandant</label>
    <length>3</length>
    <type>Text</type>
</CustomField>