force-app/main/default/objects/BlockedCountries__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Date from which this country would be considered blocked</description>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>