force-app/main/default/objects/BlockedCountries__c/listViews/SHS.listView-meta.xml
<ListView>
    <fullName>SHS</fullName>
    <columns>NAME</columns>
    <columns>CountryCode__c</columns>
    <columns>SETUP_TYPE</columns>
    <filterScope>Everything</filterScope>
    <label>SHS</label>
    <language>en_US</language>
</ListView>